# ubx_tutorials

./: .gitignore  Readme.md
cblock_tutorial_auto/: CMakeLists.txt  cblock_tutorial_auto.usc  run.sh
cblock_tutorial_auto/cmake/: cblock-tutorial-auto-config.cmake.in
cblock_tutorial_auto/models/: cblock_tutorial_auto.pkg  receiver_block.blx  sender_block.blx
cblock_tutorial_auto/modules/: receivermod_module.c  receivermod_module.h  sendermod_module.c  sendermod_module.h
cblock_tutorial_auto/src/: receiver.c  receiver.h  receiver.usc  sender.c  sender.h
cblock_tutorial_auto/types/: cblock_tutorial_auto_types.c  my_data.h
